--- a/index.html
+++ b/index.html
@@ -85,13 +85,29 @@
             opacity: 1;
             transform: scale(1.1);
         }
+        /* Mobile Menu Styles */
+        #mobile-menu {
+            transition: transform 0.3s ease-in-out;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-gray-300">
 
+    <!-- Mobile Header -->
+    <header class="lg:hidden sticky top-0 bg-gray-900/80 backdrop-blur-sm z-20 border-b border-gray-800">
+        <div class="flex items-center justify-between p-4">
+            <h2 class="font-bold text-xl text-white">Marzban API</h2>
+            <button id="mobile-menu-button" class="text-gray-400 hover:text-white">
+                <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+                </svg>
+            </button>
+        </div>
+    </header>
+
     <div class="flex">
         <!-- Sidebar Navigation -->
-        <aside class="hidden lg:block sticky top-0 h-screen w-64 text-gray-400 border-r border-gray-800 p-8">
+        <aside id="mobile-menu" class="fixed lg:sticky top-0 h-screen w-64 bg-gray-900 text-gray-400 border-r border-gray-800 p-8 z-30 transform -translate-x-full lg:translate-x-0">
             <h2 class="font-bold text-xl text-white mb-6">Marzban API</h2>
             <nav id="sidebar-nav" class="flex flex-col space-y-2">
                 <a href="#introduction" class="nav-link border-l-2 border-transparent pl-4 py-1">Introduction</a>
@@ -277,6 +293,23 @@
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
+            // --- Mobile Menu Toggle ---
+            const mobileMenuButton = document.getElementById('mobile-menu-button');
+            const mobileMenu = document.getElementById('mobile-menu');
+            const navLinksMobile = mobileMenu.querySelectorAll('a');
+
+            function closeMenu() {
+                mobileMenu.classList.add('-translate-x-full');
+            }
+
+            mobileMenuButton.addEventListener('click', function() {
+                mobileMenu.classList.toggle('-translate-x-full');
+            });
+
+            navLinksMobile.forEach(link => {
+                link.addEventListener('click', closeMenu);
+            });
+
             // --- Dynamically create endpoint HTML elements ---
             const endpointContainer = document.getElementById('api-sections');
             const endpointItems = endpointContainer.querySelectorAll('.endpoint-item');
